--- a/minard/templates/layout.html
+++ b/minard/templates/layout.html
@@ -37,6 +37,7 @@
                         <ul class='dropdown-menu'>
                             {{ nav_link('detector', 'Occupancy') }}
                             {{ nav_link('eos_runs', 'Runs') }}
+                            {{ nav_link('gold_runs', 'Gold Runs') }}
                             {{ nav_link('hv', 'High Voltage Polling') }}
                         </ul>
                         <!-- Dropdown Etcheverry -->
